Remove unnecessary prefix

--- a/app/views/posts/_post_list_item.html.erb
+++ b/app/views/posts/_post_list_item.html.erb
@@ -11,7 +11,7 @@
       <div class="ff-text flex flex-wrap items-center gap-x-2 gap-y-1 text-sm text-slate-500">
         <% segments = [] %>
         <% if local_assigns.fetch(:show_feed, false) && post.feed.present? %>
-          <% segments << safe_join(["Feed:", link_to(post.feed.name, feed_path(post.feed), class: "ff-link")], " ") %>
+          <% segments << link_to(post.feed.name, feed_path(post.feed), class: "ff-link") %>
         <% end %>
         <% if post.published_at %>
           <% segments << safe_join(["Published", time_ago_tag(post.published_at)], " ") %>
