--- a/app/views/posts/_posts_list.html.erb
+++ b/app/views/posts/_posts_list.html.erb
@@ -2,7 +2,7 @@
 <% if posts.any? %>
   <ul class="divide-y divide-slate-200 overflow-hidden rounded-xl border border-slate-200 bg-white shadow-sm">
     <% posts.each do |post| %>
-      <%= render "posts/post_list_item", post: post, show_feed: show_feed %>
+      <%= render "posts/post_list_item", post: post, show_feed: show_feed, withdraw_allowed: policy(post).destroy? %>
     <% end %>
   </ul>
 <% else %>
