Remove obsolete sorting view logic

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,22 +6,22 @@
       <thead>
         <tr>
           <th>
-            <%= sortable_header(field: "email", title: "Email") %>
+            Email
           </th>
           <th>
-            <%= sortable_header(field: "name", title: "Name") %>
+            Name
           </th>
           <th class="text-center">
-            <%= sortable_header(field: "feeds", title: "Feeds") %>
+            Feeds
           </th>
           <th class="text-center">
-            <%= sortable_header(field: "tokens", title: "Tokens") %>
+            Tokens
           </th>
           <th class="text-center">
-            <%= sortable_header(field: "posts", title: "Posts") %>
+            Posts
           </th>
           <th class="text-center">
-            <%= sortable_header(field: "last_seen", title: "Last Seen") %>
+            Last Seen
           </th>
         </tr>
       </thead>
