--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,22 +6,22 @@
       <thead>
         <tr>
           <th>
-            <%= sortable_header(column: "email", title: "Email") %>
+            Email
           </th>
           <th>
-            <%= sortable_header(column: "name", title: "Name") %>
+            Name
           </th>
           <th class="text-center">
-            <%= sortable_header(column: "feeds", title: "Feeds") %>
+            Feeds
           </th>
           <th class="text-center">
-            <%= sortable_header(column: "tokens", title: "Tokens") %>
+            Tokens
           </th>
           <th class="text-center">
-            <%= sortable_header(column: "posts", title: "Posts") %>
+            Posts
           </th>
           <th class="text-center">
-            <%= sortable_header(column: "last_seen", title: "Last Seen") %>
+            Last Seen
           </th>
         </tr>
       </thead>
@@ -72,4 +72,3 @@
     <p class="text-muted">No users found</p>
   </div>
 <% end %>
-
