--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -39,38 +39,23 @@
   <% else %>
     <section class="space-y-6">
       <h1 class="ff-h1">Status</h1>
-      <div class="ff-stats">
-        <div class="ff-stats__row">
-          <span class="ff-stats__label">Total feeds:</span>
-          <span class="ff-stats__value"><%= number_with_delimiter(@user.total_feeds_count) %></span>
-        </div>
+      <% stats_list = ListGroupComponent.new %>
+      <% stats_list.stat_item(label: "Total feeds", value: number_with_delimiter(@user.total_feeds_count)) %>
 
-        <% if @user.total_imported_posts_count > 0 %>
-          <div class="ff-stats__row">
-            <span class="ff-stats__label">Total imported posts:</span>
-            <span class="ff-stats__value"><%= number_with_delimiter(@user.total_imported_posts_count) %></span>
-          </div>
+      <% if @user.total_imported_posts_count > 0 %>
+        <% stats_list.stat_item(label: "Total imported posts", value: number_with_delimiter(@user.total_imported_posts_count)) %>
+        <% stats_list.stat_item(label: "Total published posts", value: number_with_delimiter(@user.total_published_posts_count)) %>
+      <% end %>
 
-          <div class="ff-stats__row">
-            <span class="ff-stats__label">Total published posts:</span>
-            <span class="ff-stats__value"><%= number_with_delimiter(@user.total_published_posts_count) %></span>
-          </div>
-        <% end %>
+      <% if (recent_publication = @user.most_recent_post_published_at) %>
+        <% stats_list.stat_item(label: "Most recent post publication", value: "#{time_ago_in_words(recent_publication)} ago") %>
+      <% end %>
 
-        <% if @user.most_recent_post_published_at %>
-          <div class="ff-stats__row">
-            <span class="ff-stats__label">Most recent post publication:</span>
-            <span class="ff-stats__value"><%= time_ago_in_words(@user.most_recent_post_published_at) %> ago</span>
-          </div>
-        <% end %>
+      <% if @user.total_imported_posts_count > 0 %>
+        <% stats_list.stat_item(label: "Average posts per day (last week)", value: number_with_precision(@user.average_posts_per_day_last_week, precision: 1)) %>
+      <% end %>
 
-        <% if @user.total_imported_posts_count > 0 %>
-          <div class="ff-stats__row">
-            <span class="ff-stats__label">Average posts per day (last week):</span>
-            <span class="ff-stats__value"><%= number_with_precision(@user.average_posts_per_day_last_week, precision: 1) %></span>
-          </div>
-        <% end %>
-      </div>
+      <%= render stats_list %>
     </section>
   <% end %>
 </div>
