--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -50,31 +50,28 @@
 
   <section class="space-y-4">
     <h2 class="ff-h2">Stats</h2>
-    <div class="ff-stats">
-      <div class="ff-stats__row">
-        <span class="ff-stats__label">Last refresh:</span>
-        <span class="ff-stats__value">
-          <%= @feed.last_refreshed_at ? time_ago_tag(@feed.last_refreshed_at) : content_tag(:span, "Never", class: "text-slate-500") %>
-        </span>
-      </div>
-
-      <div class="ff-stats__row">
-        <span class="ff-stats__label">Most recent post:</span>
-        <span class="ff-stats__value">
-          <%= @feed.most_recent_post_date ? time_ago_tag(@feed.most_recent_post_date) : content_tag(:span, "No posts imported", class: "text-slate-500") %>
-        </span>
-      </div>
-
-      <div class="ff-stats__row">
-        <span class="ff-stats__label">Imported posts:</span>
-        <span class="ff-stats__value"><%= number_with_delimiter(@feed.posts.count) %></span>
-      </div>
-
-      <div class="ff-stats__row">
-        <span class="ff-stats__label">Published posts:</span>
-        <span class="ff-stats__value"><%= number_with_delimiter(@feed.posts.published.count) %></span>
-      </div>
-    </div>
+    <% component = ListGroupComponent.new %>
+    <% component.with_item(ListGroupComponent::StatItemComponent.new(
+      label: "Last refresh:",
+      value: @feed.last_refreshed_at ? time_ago_tag(@feed.last_refreshed_at) : content_tag(:span, "Never", class: "text-slate-500"),
+      key: "stats.last_refresh"
+    )) %>
+    <% component.with_item(ListGroupComponent::StatItemComponent.new(
+      label: "Most recent post:",
+      value: @feed.most_recent_post_date ? time_ago_tag(@feed.most_recent_post_date) : content_tag(:span, "No posts imported", class: "text-slate-500"),
+      key: "stats.most_recent_post"
+    )) %>
+    <% component.with_item(ListGroupComponent::StatItemComponent.new(
+      label: "Imported posts:",
+      value: number_with_delimiter(@feed.posts.count),
+      key: "stats.imported_posts"
+    )) %>
+    <% component.with_item(ListGroupComponent::StatItemComponent.new(
+      label: "Published posts:",
+      value: number_with_delimiter(@feed.posts.published.count),
+      key: "stats.published_posts"
+    )) %>
+    <%= render(component) %>
   </section>
 
   <section class="space-y-4">
