--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
   <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
     <div>
       <h1 class="ff-h1">Post <%= @post.id %></h1>
-      <span class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium <%= post_status_badge_classes(@post.status) %>">
+      <span class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium <%= post_status_badge_classes(@post.status) %>" data-key="post.status_badge">
         <%= @post.status.capitalize %>
       </span>
     </div>
